Personel Listesi görüntüleme sayfası tasarlandı

--- a/DebitControl.csproj
+++ b/DebitControl.csproj
@@ -2200,6 +2200,7 @@
     <Content Include="Template\vendor\jquery\jquery.min.map" />
     <Content Include="Template\vendor\jquery\jquery.slim.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\EmployeeList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
