--- a/DebitControl.csproj
+++ b/DebitControl.csproj
@@ -2203,6 +2203,7 @@
     <Content Include="Views\Home\EmployeeList.cshtml" />
     <Content Include="Views\Home\MailList.cshtml" />
     <Content Include="Views\Home\ComputerList.cshtml" />
+    <Content Include="Views\Home\DepartmentList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
