--- a/DebitControl.csproj
+++ b/DebitControl.csproj
@@ -2205,6 +2205,7 @@
     <Content Include="Views\Home\ComputerList.cshtml" />
     <Content Include="Views\Home\DepartmentList.cshtml" />
     <Content Include="Views\Home\DeviceList.cshtml" />
+    <Content Include="Views\Home\CreateDepartment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
